--- a/SteinVGD.ipynb
+++ b/SteinVGD.ipynb
@@ -412,11 +412,7 @@
       "metadata": {
         "id": "uPMzkZ0WBtdm",
         "colab_type": "code",
-        "outputId": "33b99107-28f0-47d1-e45e-f5b2d12a1715",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 119
-        }
+        "colab": {}
       },
       "source": [
         "def log_gaussian_pdf(t, mu, log_inv_scale):\n",
@@ -425,7 +421,7 @@
         "  indiv = log_inv_scale - 0.5*torch.pow(torch.exp(log_inv_scale)*(t - mu), 2) - half_log_2pi\n",
         "  return torch.sum(indiv)\n",
         "\n",
-        "def log_likelihood(Y, W, X, log_gamma):\n",
+        "def log_likelihood(Y, W, X, log_gamma, mlp):\n",
         "  # exact\n",
         "  return log_gaussian_pdf(Y, mlp(W, X), log_gamma)\n",
         "\n",
@@ -439,73 +435,79 @@
         "  # correct up to constant addition\n",
         "  return beta*z - (1/alpha)*torch.exp(z)\n",
         "\n",
-        "def log_posterior(W, log_gamma, log_lambda, X, Y):\n",
+        "def log_posterior(W, log_gamma, log_lambda, X, Y, mlp):\n",
         "  # correct up to constant addition\n",
-        "  llike = log_likelihood(Y, W, X, log_gamma)\n",
+        "  llike = log_likelihood(Y, W, X, log_gamma, mlp)\n",
         "  lpri = log_prior(W, log_lambda)\n",
         "  lhypri_gamma = log_hyperprior(log_gamma)\n",
         "  lhypri_lambda = log_hyperprior(log_lambda)\n",
         "  return llike + lpri + lhypri_gamma + lhypri_lambda\n",
         "\n",
-        "relu = nn.ReLU()\n",
-        "def mlp(W, X, hidden_units = 10):\n",
-        "  X_dim = X.size(1)\n",
-        "  X = X.transpose(1, 0) # (X_dim, B)\n",
-        "  t = hidden_units * X_dim\n",
-        "  w1 = W[0:t].view(hidden_units, X_dim)\n",
-        "  b1 = W[t:t+hidden_units].view(hidden_units, 1)\n",
-        "  w2 = W[t+X_dim:t+X_dim+hidden_units].view(1, hidden_units)\n",
-        "  b2 = W[-1]\n",
-        "  z1 = torch.mm(w1, X) + b1\n",
-        "  a1 = relu(z1)\n",
-        "  z2 = torch.mm(w2, a1) + b2\n",
-        "  return z2\n",
+        "def make_mlp(X_dim, hidden_units=10):\n",
+        "  W_dim = (X_dim+1)*hidden_units + (hidden_units+1)*1\n",
+        "  relu = nn.ReLU()\n",
+        "  def mlp(W, X):\n",
+        "    X = X.transpose(1, 0) # (X_dim, B)\n",
+        "    t = hidden_units * X_dim\n",
+        "    w1 = W[0:t].view(hidden_units, X_dim)\n",
+        "    b1 = W[t:t+hidden_units].view(hidden_units, 1)\n",
+        "    w2 = W[t+X_dim:t+X_dim+hidden_units].view(1, hidden_units)\n",
+        "    b2 = W[-1]\n",
+        "    z1 = torch.mm(w1, X) + b1\n",
+        "    a1 = relu(z1)\n",
+        "    z2 = torch.mm(w2, a1) + b2\n",
+        "    return z2\n",
+        "  return mlp, W_dim\n",
         "\n",
-        "def fwd_log_post_v(v):\n",
-        "  W, log_gamma, log_lambda = v[:-2], v[-2], v[-1]\n",
-        "  return log_posterior(W, log_gamma, log_lambda, X, Y)\n",
-        "grad_log_post_v = fwd_to_grad(fwd_log_post_v)\n",
-        "\n",
-        "\n",
-        "# spec\n",
-        "X_dim = 3\n",
-        "batch_size = 4\n",
-        "W_dim = (X_dim+1)*hidden_units + (hidden_units+1)*1\n",
-        "v_dim = W_dim + 2\n",
-        "\n",
-        "# create dummy data\n",
-        "X = torch.rand((batch_size, X_dim))\n",
-        "Y = torch.rand((batch_size, 1))\n",
-        "\n",
-        "# initialize\n",
-        "init_dist = dist.normal.Normal(0, 0.1)\n",
-        "V = init_dist.sample((n_samples, v_dim))\n",
-        "\n",
-        "sq_acc=0.0\n",
-        "for _ in range(3):\n",
-        "  phi = svgd_update(V, grad_log_post_v)\n",
-        "  step_sizes = adagrad(phi, sq_acc)\n",
-        "  V = V + torch.mul(step_sizes, phi)\n",
-        "  print(V[:2, :2])\n",
-        "  \n",
-        "# sanity check: linear model MAP\n",
-        "\n"
+        "def make_grad(X, Y, mlp):\n",
+        "  def fwd_log_post_v(v):\n",
+        "    W, log_gamma, log_lambda = v[:-2], v[-2], v[-1]\n",
+        "    return log_posterior(W, log_gamma, log_lambda, X, Y, mlp)\n",
+        "  return fwd_to_grad(fwd_log_post_v)"
       ],
-      "execution_count": 120,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "tensor([[-0.8169, -0.6717],\n",
-            "        [-0.7602, -0.9835]])\n",
-            "tensor([[-1.8169, -1.6717],\n",
-            "        [-1.7602, -1.9835]])\n",
-            "tensor([[-0.8230, -0.6789],\n",
-            "        [-0.7653, -0.9881]])\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5QcvHy_KJLsE",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def train_BNN(X, Y, mlp, W_dim, n_samples, n_iters):\n",
+        "  # dimensions\n",
+        "  batch_size = X.size(0)\n",
+        "  X_dim = X.size(1)\n",
+        "  v_dim = W_dim + 2 # MLP weights, log gamma, log lambda\n",
+        "\n",
+        "  # initialize\n",
+        "  grad_log_post_v = make_grad(X, Y, mlp)\n",
+        "  init_dist = dist.normal.Normal(0, 0.1)\n",
+        "  V = init_dist.sample((n_samples, v_dim))\n",
+        "  \n",
+        "  # SVGD\n",
+        "  sq_acc=0.0\n",
+        "  for _ in range(n_iters):\n",
+        "    grad_log_post_v = make_grad(X, Y, mlp)\n",
+        "    phi = svgd_update(V, grad_log_post_v)\n",
+        "    step_sizes, sq_acc = adagrad(phi, sq_acc)\n",
+        "    V = V + torch.mul(step_sizes, phi)\n",
+        "  return V\n",
+        "\n",
+        "# make toy data\n",
+        "batch_size = 10\n",
+        "X_dim = 3\n",
+        "X_train = torch.rand((batch_size, X_dim))\n",
+        "Y_train = torch.rand((batch_size, 1))\n",
+        "\n",
+        "# build & train BNN\n",
+        "mlp, W_dim = make_mlp(X_dim, hidden_units=10)\n",
+        "V = train_BNN(X, Y, mlp, W_dim, n_samples=10, n_iters=5)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -515,36 +517,7 @@
         "colab": {}
       },
       "source": [
-        "\n",
-        "#print(grad_log_post_v(V[0, :]))\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "'''\n",
-        "# initialize\n",
-        "\n",
-        "net = nn.Sequential(\n",
-        "  nn.Linear(X_dim, hidden_units),\n",
-        "  nn.ReLU(),\n",
-        "  nn.Linear(hidden_units, 1)\n",
-        ")\n",
-        "log_gamma = torch.zeros(1)\n",
-        "log_lambda = torch.zeros(1)\n",
-        "\n",
-        "sq_acc=0.0\n",
-        "for _ in range(1):\n",
-        "  phi = svgd_update(V, grad_log_post_v)\n",
-        "  step_sizes = adagrad(phi, sq_acc)\n",
-        "  V = V + torch.mul(step_sizes, phi)\n",
-        "  print(V[:2, :2])\n",
-        "\n",
-        "'''*0\n",
-        "\n",
-        "\n",
-        "\n",
-        "#TODO: batch computation\n",
-        "#TODO: efficient estimation"
+        ""
       ],
       "execution_count": 0,
       "outputs": []
