RMSE test for BNN

--- a/SteinVGD.ipynb
+++ b/SteinVGD.ipynb
@@ -423,7 +423,7 @@
         "\n",
         "def log_likelihood(Y, W, X, log_gamma, mlp):\n",
         "  # exact\n",
-        "  return log_gaussian_pdf(Y, mlp(W, X), log_gamma)\n",
+        "  return log_gaussian_pdf(Y, mlp(X, W), log_gamma)\n",
         "\n",
         "def log_prior(W, log_lambda):\n",
         "  # exact\n",
@@ -446,7 +446,7 @@
         "def make_mlp(X_dim, hidden_units=10):\n",
         "  W_dim = (X_dim+1)*hidden_units + (hidden_units+1)*1\n",
         "  relu = nn.ReLU()\n",
-        "  def mlp(W, X):\n",
+        "  def mlp(X, W):\n",
         "    X = X.transpose(1, 0) # (X_dim, B)\n",
         "    t = hidden_units * X_dim\n",
         "    w1 = W[0:t].view(hidden_units, X_dim)\n",
@@ -456,17 +456,31 @@
         "    z1 = torch.mm(w1, X) + b1\n",
         "    a1 = relu(z1)\n",
         "    z2 = torch.mm(w2, a1) + b2\n",
-        "    return z2\n",
+        "    return z2.transpose(1, 0) # (B)\n",
         "  return mlp, W_dim\n",
         "\n",
+        "def unpack_v(v):\n",
+        "  W, log_gamma, log_lambda = v[:-2], v[-2], v[-1]\n",
+        "  return W, log_gamma, log_lambda\n",
+        "  \n",
         "def make_grad(X, Y, mlp):\n",
         "  def fwd_log_post_v(v):\n",
-        "    W, log_gamma, log_lambda = v[:-2], v[-2], v[-1]\n",
+        "    W, log_gamma, log_lambda = unpack_v(v)\n",
         "    return log_posterior(W, log_gamma, log_lambda, X, Y, mlp)\n",
         "  return fwd_to_grad(fwd_log_post_v)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "evYqYdoTUn6P",
+        "colab_type": "text"
+      },
+      "source": [
+        "### BNN training routine"
+      ]
     },
     {
       "cell_type": "code",
@@ -510,6 +524,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZrRG0NUNUhLh",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Check using toy data"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "EYdMD0gpDWVq",
@@ -517,10 +541,119 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def make_toy_data(N):\n",
+        "  # ground truth model\n",
+        "  X_dim = 3\n",
+        "  GT_X_dist = dist.normal.Normal(0., 3.)\n",
+        "  GT_mlp, GT_W_dim = make_mlp(X_dim, hidden_units=2)\n",
+        "  GT_W_dist = dist.normal.Normal(0., 1.)\n",
+        "  GT_W = GT_W_dist.sample([GT_W_dim])\n",
+        "  GT_inv_gamma = 0.1\n",
+        "  GT_noise_dist = dist.normal.Normal(0., GT_inv_gamma)\n",
+        "  GT_log_gamma = -torch.log(torch.Tensor([GT_inv_gamma]))\n",
+        "  # generate data\n",
+        "  X = GT_X_dist.sample([N, X_dim])\n",
+        "  noise = GT_noise_dist.sample([N, 1])\n",
+        "  Y = GT_mlp(X, GT_W) + noise\n",
+        "  return X, Y\n",
+        "\n",
+        "def split_data(X, Y, test_ratio=0.8):\n",
+        "  N = X.size(0)\n",
+        "  N_test = int(test_ratio*N)\n",
+        "  N_train = N - N_test\n",
+        "  X_train, Y_train = X[:N_train, :], Y[:N_train, :]\n",
+        "  X_test, Y_test = X[N_train:, :], Y[N_train:, :]\n",
+        "  return X_train, Y_train, X_test, Y_test\n",
+        "\n",
+        "\n",
+        "X, Y = make_toy_data(100)\n",
+        "X_dim = X.size(1)\n",
+        "\n",
+        "# setup\n",
+        "X_train, Y_train, X_test, Y_test = split_data(X, Y)\n",
+        "\n",
+        "# build & train BNN\n",
+        "mlp, W_dim = make_mlp(X_dim, hidden_units=2)\n",
+        "good_V = train_BNN(X_train, Y_train, mlp, W_dim, n_samples=10, n_iters=1000)\n",
+        "bad_V = train_BNN(X_train, Y_train, mlp, W_dim, n_samples=10, n_iters=1)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "mVuaD5DJc2L5",
+        "colab_type": "text"
+      },
+      "source": [
+        "**inference**\n",
+        "\n",
+        "$\n",
+        "p(\\bar{y} | \\bar{x}, X, Y) \n",
+        "\\\\=\\int{p(\\bar{y} | Y|W, \\bar{x}, \\gamma)p(W, \\gamma, \\lambda | X, Y)dW d\\gamma d\\lambda}\n",
+        "\\\\=\\int{\\mathcal{N}(\\bar{y} | f(\\bar{x}; W), \\gamma^{-1})p(W, \\gamma, \\lambda | X, Y)dW d\\gamma d\\lambda}\n",
+        "\\\\\\approx \\frac{1}{M}\\sum_{m=1}^M{\\mathcal{N}(\\bar{y} | f(\\bar{x}; W_m), \\gamma_m^{-1})}\n",
+        "$\n",
+        "\n",
+        "**squared error**\n",
+        "\n",
+        "$\\int{(y - \\mu + b)^2\\mathcal{N}(y | \\mu, \\sigma)dy}\n",
+        "\\\\=\\int{((y - \\mu)^2 + 2(y - \\mu)b + b^2) \\mathcal{N}(y | \\mu, \\sigma)dy}\n",
+        "\\\\=\\sigma^2 + b^2$\n",
+        "\n",
+        "\n",
+        "$\n",
+        "\\int{(y - \\bar{y})^2\\frac{1}{M}\\sum_{m=1}^M{\\mathcal{N}(y | f(\\bar{x}; W_m), \\gamma_m^{-1})} dy}\n",
+        "\\\\=\\frac{1}{M}\\sum_{m=1}^M{\\int{(y - \\bar{y})^2 \\mathcal{N}(y | f(\\bar{x}; W_m), \\gamma_m^{-1}) dy}}\n",
+        "\\\\=\\frac{1}{M}\\sum_{m=1}^M[\\gamma_m^{-2} + (f(\\bar{x}; W_m) - \\bar{y})^2]\n",
+        "$"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wOnUai7TcMaW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "4666ab7e-fb09-4f59-9e00-fbd2ba6a85c6"
+      },
+      "source": [
+        "def test_BNN(X_test, Y_test, V, mlp):\n",
+        "  ll = None\n",
+        "  N_data = X_test.size(0)\n",
+        "  n_samples = V.size(0)\n",
+        "  sq_err_sum = 0.0\n",
+        "  for m in range(n_samples):\n",
+        "    v = V[m, :]\n",
+        "    W, log_gamma, log_lambda = unpack_v(v)\n",
+        "    inv_gamma_sq = torch.pow(torch.exp(-log_gamma), 2)\n",
+        "    bias = mlp(X_test, W) - Y_test\n",
+        "    sq_err = torch.mul(bias, bias) + inv_gamma_sq\n",
+        "    sq_err_sum += torch.sum(sq_err)\n",
+        "  rmse = torch.sqrt(sq_err_sum/(n_samples * N_data)).item()\n",
+        "  \n",
+        "  return rmse, ll\n",
+        "\n",
+        "rmse, ll = test_BNN(X_test, Y_test, good_V, mlp)\n",
+        "print(\"Good model\\tRMSE: %.5f\\tLL: ?\"%(rmse))\n",
+        "rmse, ll = test_BNN(X_test, Y_test, bad_V, mlp)\n",
+        "print(\"Bad model\\tRMSE: %.5f\\tLL: ?\"%(rmse))"
+      ],
+      "execution_count": 314,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Good model\tRMSE: 0.49387\tLL: ?\n",
+            "Bad model\tRMSE: 5.56205\tLL: ?\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
